# OFPlayer-tauri-community

./: .gitattributes  .gitignore  LICENSE  LICENSE-MIT  README.md  index.html  lyric-capsule.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: lyric-capsule.md  (+6 more)
src-tauri/: Cargo.toml  LICENSE  build.rs  src-tauri.lnk  tauri.conf.json
src-tauri/capabilities/: default.json  lyric-capsule.json
src-tauri/icons/: icon.icns
src-tauri/installer/: generate-installer-assets.ps1  nsis-hooks.nsh
src-tauri/installer/nsis/: English.nsh  SimpChinese.nsh
src-tauri/installer/wix/: en-US.wxl  zh-CN.wxl
src-tauri/permissions/autogenerated/: capsule_apply_hit_region.toml  capsule_create_window.toml  capsule_get_boot_state.toml  capsule_release.toml  desktop_app_exit.toml  desktop_catalog_delete_libraries.toml  desktop_catalog_delete_playlist_track_relations.toml  desktop_catalog_delete_playlists.toml  desktop_catalog_delete_tracks.toml  desktop_catalog_get_track.toml  desktop_catalog_load_snapshot.toml  desktop_catalog_put_libraries.toml  desktop_catalog_put_playlist_track_relations.toml  desktop_catalog_put_playlists.toml  desktop_catalog_put_tracks.toml  desktop_catalog_query_collection_tracks.toml  desktop_catalog_resolve_navigation.toml  desktop_catalog_update_track.toml  desktop_external_library_delete_connection.toml  desktop_external_library_load_connections.toml  desktop_external_library_put_connection.toml  desktop_history_append.toml  desktop_history_load_recent.toml  desktop_history_load_stats.toml  desktop_library_create.toml  desktop_library_delete.toml  desktop_library_import_files.toml  (+55 more)
src-tauri/src/: app_paths.rs  artwork_store.rs  audio_formats.rs  capsule_artwork_cache.rs  capsule_meter.rs  capsule_state.rs  capsule_window_region.rs  catalog_db.rs  db_helpers.rs  desktop_state.rs  desktop_types.rs  diagnostics.rs  dsd_playback.rs  external_sources.rs  lib.rs  library_import_jobs.rs  lyrics.rs  main.rs  metadata.rs  navigation.rs  playback.rs  schema.rs  session_ops.rs  sorting.rs  storage.rs  storage_maintenance.rs  system_media.rs  watcher.rs
(+124 files in other folders)
